@@ -1,0 +1,34 @@
+/*
+ * CAF common code
+ * Copyright (c) 2007  Justin Ruggles
+ *
+ * This file is part of FFmpeg.
+ *
+ * FFmpeg is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * FFmpeg is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with FFmpeg; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ */
+
+/**
+ * @file libavformat/caf.h
+ * CAF common code
+ */
+
+#ifndef AVFORMAT_CAF_H
+#define AVFORMAT_CAF_H
+
+#include "avformat.h"
+
+extern const AVCodecTag ff_codec_caf_tags[];
+
+#endif /* AVFORMAT_CAF_H */
